--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -22,10 +22,18 @@
       gap: 12px;
 
       .left-header-img {
-        max-width: 100%
+        max-width: 100%;
+        @include responsive.sm{
+          height: 33px;
+          width: 45.53px;
+        }
       }
       .left-header-logo-text{
-        max-width: 100%
+        max-width: 100%;
+        @include responsive.sm{
+          height: 9.82px;
+          width: 84.98px;
+        }
       }
     }
 
@@ -63,15 +71,22 @@
               display: none;
             }
           }
-          :first-child{
+          .link-1 {
+            text-decoration: none;
+            text-transform: capitalize;
+            color: black;
+            font-weight: 600;
             @include responsive.sm{
-              
-            }   
-        }
+              display: none;
+            }
+            }
         .burger{
           display:none;
           @include responsive.md{
             display: inline;
+          }
+          @include responsive.sm{
+            padding-right: 32px;
           }
         }
         
