--- a/scss/_section-3.scss
+++ b/scss/_section-3.scss
@@ -121,17 +121,19 @@
           justify-content: flex-start;
           background-color: variables.$color-haki;
           color: white;
-          border-top-left-radius: 10px;
-          border-bottom-left-radius: 10px;
           padding-top: 78px;
           padding-left: 50px;
           padding-right: 50px;
+          border-radius: 10px;
           padding-bottom: 72px;
           @include responsive.sm{
             padding-top: 34px;
             padding-left: 22px;
             padding-right: 22px;
             padding-bottom: 32px;
+            border-radius: 0;
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
           }   
           .content-wrapper-img{
             width: 64px;
