--- a/scss/_section-5.scss
+++ b/scss/_section-5.scss
@@ -4,7 +4,7 @@
 .section-5-wrapper{
   margin-bottom: 100px;
   @include responsive.sm{
-    margin-bottom: 105px;
+    margin-bottom: 64,85px;
   }
 
   .container-xl{
@@ -106,6 +106,7 @@
           margin-left: 0;
           margin-right: 0;
           grid-template-columns: 1fr 1fr;
+          position: relative;
         }
         .item-1{
           display: flex;
@@ -115,9 +116,108 @@
           background: rgb(255,255,255);
           background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(218,222,218,1) 100%);
           border-radius: 10px;
+          @include responsive.sm{
+            width: 233.38px;
+            height: 271.63px;
+          }
           .item-top{
-            display: grid;
-            grid-template-columns: 1fr 1fr;
+            display: flex;
+            margin-bottom: 10px;
+            .top-img-wrapper{
+              .top-image{
+                max-width: 100%;
+                @include responsive.sm{
+                  width: 173.74px;
+                  height: 99.83px;
+                }
+              }
+            }
+            .top-text-wrapper{
+              .tittlle{
+                font-size: 16px;
+                font-weight: bold;
+                display: flex;
+                flex-direction: column;
+                @include responsive.sm{
+                  font-size: 12px;
+                }   
+              }
+              .subtitlle{
+                font-size: 13px;
+                @include responsive.sm{
+                  font-size: 10px;
+                }  
+              }
+              .description{
+                @include responsive.sm{
+                  font-size: 12px;
+                }  
+              }
+            }
+          }
+        }
+        .item-2{
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          padding: 40px;
+          background: rgb(255,255,255);
+          background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(218,222,218,1) 100%);
+          border-radius: 10px;
+          @include responsive.sm{
+            width: 233.38px;
+            height: 271.63px;
+            position: absolute;
+          }
+          .item-top{
+            display: flex;
+            margin-bottom: 10px;
+            .top-img-wrapper{
+              .top-image{
+                max-width: 100%;
+                @include responsive.sm{
+                  width: 173.74px;
+                  height: 99.83px;
+                }
+              }
+            }
+            .top-text-wrapper{
+              .tittlle{
+                font-size: 16px;
+                font-weight: bold;
+                display: flex;
+                flex-direction: column;
+                @include responsive.sm{
+                  font-size: 12px;
+                }   
+              }
+              .subtitlle{
+                font-size: 13px;
+                @include responsive.sm{
+                  font-size: 10px;
+                }  
+              }
+              .description{
+                @include responsive.sm{
+                  font-size: 12px;
+                }  
+              }
+            }
+          }
+        }
+        .item-3{
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          padding: 40px;
+          background: rgb(255,255,255);
+          background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(218,222,218,1) 100%);
+          border-radius: 10px;
+          @include responsive.sm{
+            display: none;
+          }
+          .item-top{
+            display: flex;
             margin-bottom: 10px;
             .top-img-wrapper{
               .top-image{
@@ -148,7 +248,6 @@
             }
           }
         }
-        
       }
     }
   }
