--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -95,7 +95,8 @@
         text-decoration: none;
         text-transform: capitalize;
         color: variables.$color-softwhite;
-        background-color: variables.$color-haki;
+        background: rgb(100,123,100);
+        background: linear-gradient(90deg, rgba(100,123,100,1) 0%, rgba(102,172,102,1) 100%);
         border-width: 0;
         padding: 15px;
         border-radius: 10px;
