--- a/styles.css
+++ b/styles.css
@@ -1395,7 +1395,8 @@
   text-decoration: none;
   text-transform: capitalize;
   color: rgb(254, 254, 254);
-  background-color: rgb(100, 123, 100);
+  background: rgb(100, 123, 100);
+  background: linear-gradient(90deg, rgb(100, 123, 100) 0%, rgb(102, 172, 102) 100%);
   border-width: 0;
   padding: 15px;
   border-radius: 10px;
