--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 
 .page-wrapper {
   background: #FFFFFF;
-  background-image: url(/images/background.png);
+  background-image: url(images/background.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
