--- a/scss/_section-5.scss
+++ b/scss/_section-5.scss
@@ -118,8 +118,8 @@
           background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(235,238,235,1) 100%);
           border-radius: 10px;
           @include responsive.sm{
-            width: 233.38px;
-            height: 271.63px;
+            width: 200px;
+
           }
           .item-top{
             display: flex;
@@ -166,9 +166,9 @@
           background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(235,238,235,1) 100%);
           border-radius: 10px;
           @include responsive.sm{
-            width: 233.38px;
-            height: 271.63px;
+            width: 200px;
             position: absolute;
+            left: 228px;
           }
           .item-top{
             display: flex;
