--- a/scss/_section-4.scss
+++ b/scss/_section-4.scss
@@ -83,6 +83,7 @@
           }   
         }
         .description{
+          color: variables.$color-soft-grey;
           margin-bottom: 25px;
         }
         .button{
