--- a/scss/_section-1.scss
+++ b/scss/_section-1.scss
@@ -81,9 +81,11 @@
           }
 
           .title {
-            font-size: 40px;
+            font-size: 31px;
             margin: 0;
             padding: 0;
+            text-transform: uppercase;
+            color: variables.$color-grey;
 
             @include responsive.md {
               font-size: 30px;
@@ -98,7 +100,7 @@
             font-size: 20px;
             margin: 0;
             padding: 0;
-
+            color: variables.$color-soft-grey;
             @include responsive.md {
               font-size: 16px;
             }
