--- a/scss/_section-5.scss
+++ b/scss/_section-5.scss
@@ -139,17 +139,20 @@
                 font-weight: bold;
                 display: flex;
                 flex-direction: column;
+                color: variables.$color-grey;
                 @include responsive.sm{
                   font-size: 12px;
                 }   
               }
               .subtitlle{
                 font-size: 13px;
+                color: variables.$color-soft-grey;
                 @include responsive.sm{
                   font-size: 10px;
                 }  
               }
               .description{
+                color: variables.$color-soft-grey;
                 @include responsive.sm{
                   font-size: 12px;
                 }  
@@ -188,17 +191,20 @@
                 font-weight: bold;
                 display: flex;
                 flex-direction: column;
+                color: variables.$color-grey;
                 @include responsive.sm{
                   font-size: 12px;
                 }   
               }
               .subtitlle{
                 font-size: 13px;
+                color: variables.$color-soft-grey;
                 @include responsive.sm{
                   font-size: 10px;
                 }  
               }
               .description{
+                color: variables.$color-soft-grey;
                 @include responsive.sm{
                   font-size: 12px;
                 }  
@@ -231,17 +237,20 @@
                 font-weight: bold;
                 display: flex;
                 flex-direction: column;
+                color: variables.$color-grey;
                 @include responsive.sm{
                   font-size: 12px;
                 }   
               }
               .subtitlle{
                 font-size: 13px;
+                color: variables.$color-soft-grey;
                 @include responsive.sm{
                   font-size: 10px;
                 }  
               }
               .description{
+                color: variables.$color-soft-grey;
                 @include responsive.sm{
                   font-size: 12px;
                 }  
