--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,3 +10,5 @@ $breakpoint-6: 1114px;
 
 $color-haki: rgb(100, 123, 100);
 $color-softwhite: rgb(254, 254, 254);
+$color-soft-grey: rgb(79, 79, 79);
+$color-grey: rgb(51, 51, 51);
